--- a/data/animated_histogram.ipynb
+++ b/data/animated_histogram.ipynb
@@ -23,23 +23,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "\n",
+    "import pyro\n",
+    "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as patches\n",
     "import matplotlib.path as path\n",
     "import matplotlib.animation as animation\n",
     "from IPython.display import HTML\n",
     "\n",
-    "# Fixing random state for reproducibility\n",
-    "np.random.seed(19680801)\n",
+    "mu = 0\n",
+    "sigma = 0.5\n",
+    "\n",
+    "def diststribution(mean, variance, numbers):\n",
+    "    reasult = []\n",
+    "    for i in range(numbers):\n",
+    "        x = pyro.sample(\"normal_sampling\", pyro.distributions.Normal(mean, variance))\n",
+    "        reasult.append(x)\n",
+    "    return reasult\n",
     "\n",
     "# histogram our data with numpy\n",
-    "data = np.random.randn(1000)\n",
+    "data = diststribution(mu, sigma, 1000)\n",
     "n, bins = np.histogram(data, 100)\n",
     "\n",
     "# get the corners of the rectangles for the histogram\n",
@@ -117,7 +125,7 @@
     "\n",
     "def animate(i):\n",
     "    # simulate new data coming in\n",
-    "    data = np.random.randn(1000)\n",
+    "    data = distribution(mu, sigma, 1000)\n",
     "    n, bins = np.histogram(data, 100)\n",
     "    top = bottom + n\n",
     "    verts[1::5, 1] = top\n",
